<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_get_from_moneybox"
        android:icon="@drawable/ic_action_get_from_moneybox"
        android:showAsAction="always"
        android:title="@string/get_from_moneybox"/>
    <item
        android:id="@+id/action_drop_to_moneybox"
        android:icon="@drawable/ic_action_drop_to_moneybox"
        android:showAsAction="always"
        android:title="@string/drop_to_moneybox_again"/>
    <item
        android:id="@+id/action_delete_movement"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="always"
        android:title="@string/delete"/>
    <item
        android:id="@+id/action_save_movement"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always"
        android:title="@string/save"/>
</menu>
